Fixed profile-image width on mobile phones

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -313,6 +313,7 @@ a:hover {
         display: block;
         margin-left: auto;
         margin-right: auto;
+        width: 100%;
     }
 
     .soft-skills-section {
